fix mobile layout issues

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -17,7 +17,7 @@ a {
 }
 
 .br-1 {
-    border-right: 1px solid #efefef;
+    border-right: 1px solid rgba(0,0,0,0.12);
 }
 
 .full-width {
